--- a/src/app/views/parcare-modules/users/users.component.html
+++ b/src/app/views/parcare-modules/users/users.component.html
@@ -1,42 +1,36 @@
-<app-header
-  [navbarBrandRouterLink]="['/dashboard']"
-  [fixed]="true"
-  [navbarBrandFull]="{src: 'assets/img/brand/logo.svg', width: 89, height: 25, alt: 'CoreUI Logo'}"
-  [navbarBrandMinimized]="{src: 'assets/img/brand/sygnet.svg', width: 30, height: 30, alt: 'CoreUI Logo'}"
-  [sidebarToggler]="'lg'"
->
-  <ul class="nav navbar-nav d-md-down-none">
-    <li class="nav-item px-3">
-      <a class="nav-link" href="#">Dashboard</a>
-    </li>
-    <li class="nav-item px-3">
-      <a class="nav-link" href="#">Users</a>
-    </li>
-    <li class="nav-item px-3">
-      <a class="nav-link" href="#">Settings</a>
-    </li>
-  </ul>
-  <ul class="nav navbar-nav ml-auto">
-  </ul>
+<app-header [navbarBrandRouterLink]="['/dashboard']" [fixed]="true" [navbarBrandFull]="{src: 'assets/img/brand/logo.svg', width: 89, height: 25, alt: 'CoreUI Logo'}" [navbarBrandMinimized]="{src: 'assets/img/brand/sygnet.svg', width: 30, height: 30, alt: 'CoreUI Logo'}"
+    [sidebarToggler]="'lg'">
+    <ul class="nav navbar-nav d-md-down-none">
+        <li class="nav-item px-3">
+            <a class="nav-link" href="#">Dashboard</a>
+        </li>
+        <li class="nav-item px-3">
+            <a class="nav-link" href="#/parcare-reporting">Raportare</a>
+        </li>
+        <li class="nav-item px-3">
+            <a class="nav-link" href="#">Settings</a>
+        </li>
+    </ul>
+    <ul class="nav navbar-nav ml-auto">
+    </ul>
 </app-header>
 <div class="app-body">
-  <app-sidebar #appSidebar [fixed]="true" [display]="'lg'" [minimized]="sidebarMinimized" (minimizedChange)="toggleMinimize($event)">
-    <app-sidebar-nav [navItems]="navItems" [perfectScrollbar] [disabled]="appSidebar.minimized"></app-sidebar-nav>
-    <app-sidebar-minimizer></app-sidebar-minimizer>
-  </app-sidebar>
-  <main class="main">
+    <app-sidebar #appSidebar [fixed]="true" [display]="'lg'" [minimized]="sidebarMinimized" (minimizedChange)="toggleMinimize($event)">
+        <app-sidebar-nav [navItems]="navItems" [perfectScrollbar] [disabled]="appSidebar.minimized"></app-sidebar-nav>
+        <app-sidebar-minimizer></app-sidebar-minimizer>
+    </app-sidebar>
+    <main class="main">
 
-    <!-- list container -->
-    <div class="container-fluid" *ngIf="showList">
-        
-        <div class="top-container">
-            <h4>Redactare Utilizatori</h4>
-            <button type="button" class="btn btn-primary" (click)="showList = !showList; onReset();">Adaugă</button>
-        </div>
+        <!-- list container -->
+        <div class="container-fluid" *ngIf="showList">
 
-        <!-- loader -->
-        <div *ngIf="isLoading" 
-            style="display: flex;
+            <div class="top-container">
+                <h4>Redactare Utilizatori</h4>
+                <button type="button" class="btn btn-primary" (click)="showList = !showList; onReset();">Adaugă</button>
+            </div>
+
+            <!-- loader -->
+            <div *ngIf="isLoading" style="display: flex;
             flex-direction: column;
             margin: 50px 0;
             align-items: center;
@@ -44,176 +38,177 @@
             background: #ff814c;
             border-radius: 10px;
             padding: 10px;
-            color: #fff;"
-        >
-            <h5>Se încarcă...</h5>
-            <img alt="loader" src="../../../../assets/img/send2.gif" style="width: 200px;" />
-        </div>
+            color: #fff;">
+                <h5>Se încarcă...</h5>
+                <img alt="loader" src="../../../../assets/img/send2.gif" style="width: 200px;" />
+            </div>
 
-        <!-- if no data -->
-        <div *ngIf="!isLoading && tableData.length === 0" class="data-container">
-            <img alt="nodata" src="../../../../assets/img/not-found.png" style="width: 100px; margin: 20px;" />
-            <h5>Nu sunt date în BD</h5>
-            <button type="button" class="btn btn-primary" (click)="showList = !showList; onReset();">Adaugă o entitate nouă</button>
-        </div>
+            <!-- if no data -->
+            <div *ngIf="!isLoading && tableData.length === 0" class="data-container">
+                <img alt="nodata" src="../../../../assets/img/not-found.png" style="width: 100px; margin: 20px;" />
+                <h5>Nu sunt date în BD</h5>
+                <button type="button" class="btn btn-primary" (click)="showList = !showList; onReset();">Adaugă o entitate nouă</button>
+            </div>
 
-        <!-- if no data -->
-        <div *ngIf="!isLoading && tableData.length > 0" class="data-container">
-            <div class="card-body" style="width: 100%;">
-                <table class="table table-striped">
-                  <thead>
-                    <tr>
-                        <th style="text-align: left;">Editează</th>
-                        <th>Id</th>
-                        <th>Nume</th>
-                        <th>Email</th>
-                        <th>Creat</th>
-                        <th>Modificat</th>
-                        <th>Șters</th>
-                        <th style="text-align: right;">Șterge</th>
-                    </tr>
-                  </thead>
+            <!-- if no data -->
+            <div *ngIf="!isLoading && tableData.length > 0" class="data-container">
+                <div class="card-body" style="width: 100%;">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th style="text-align: left;">Editează</th>
+                                <th>Id</th>
+                                <th>Nume</th>
+                                <th>Email</th>
+                                <th>Creat</th>
+                                <th>Modificat</th>
+                                <th>Șters</th>
+                                <th style="text-align: right;">Șterge</th>
+                            </tr>
+                        </thead>
 
-                  <tbody>
+                        <tbody>
 
-                    <tr *ngFor="let entity of tableData">
-                        <td style="text-align: left;">
-                            <button type="submit" class="btn btn-md btn-success" (click)="editUser(entity.ID)"><i class="icon-pencil"></i></button>
-                        </td>
-                        <td>{{entity.ID}}</td>
-                        <td>{{entity.name}}</td>
-                        <td>{{entity.email}}</td>
-                        <td>{{entity.CreatedAt}}</td>
-                        <td>{{entity.UpdatedAt}}</td>
-                        <td>{{entity.DeletedAt}}</td>
-                        <td style="text-align: right;">
-                            <button type="submit" class="btn btn-md btn-danger" (click)="deleteEntity(entity)">X</button>
-                        </td>
-                    </tr>
+                            <tr *ngFor="let entity of tableData">
+                                <td style="text-align: left;">
+                                    <button type="submit" class="btn btn-md btn-success" (click)="editUser(entity.ID)"><i class="icon-pencil"></i></button>
+                                </td>
+                                <td>{{entity.ID}}</td>
+                                <td>{{entity.name}}</td>
+                                <td>{{entity.email}}</td>
+                                <td>{{entity.CreatedAt}}</td>
+                                <td>{{entity.UpdatedAt}}</td>
+                                <td>{{entity.DeletedAt}}</td>
+                                <td style="text-align: right;">
+                                    <button type="submit" class="btn btn-md btn-danger" (click)="deleteEntity(entity)">X</button>
+                                </td>
+                            </tr>
 
-                  </tbody>
-                </table>
-              </div>
-
-              <!-- error message -->
-              <div class="row" *ngIf="errorMessage" style="margin-bottom: 10px;">
-                <div class="col-12" style="color: #f86c6b;">
-                  {{errorMessage}}
+                        </tbody>
+                    </table>
                 </div>
-              </div>
+
+                <!-- error message -->
+                <div class="row" *ngIf="errorMessage" style="margin-bottom: 10px;">
+                    <div class="col-12" style="color: #f86c6b;">
+                        {{errorMessage}}
+                    </div>
+                </div>
+
+            </div>
 
         </div>
-
-    </div>
-    <!-- end list container -->
-
-    <!-- input container -->
-    <div class="container-fluid" *ngIf="!showList">
-        
-        <div class="top-container">
-            <h4 *ngIf="!userID">Adaugă o entitate nouă</h4>
-            <h4 *ngIf="userID">Redactare utilizator</h4>
-            <button type="button" class="btn btn-primary" (click)="showList = !showList; onReset();">Înapoi</button>
-        </div>
+        <!-- end list container -->
 
         <!-- input container -->
-        <div class="data-container">
-            <div class="card" style="width: 100%;">
-                <div class="card-header">
-                  <strong *ngIf="!userID">Entitate nouă</strong>
-                  <p *ngIf="userID">ID utilizator: <strong>{{userID}}</strong></p>
+        <div class="container-fluid" *ngIf="!showList">
+
+            <div class="top-container">
+                <h4 *ngIf="!userID">Adaugă o entitate nouă</h4>
+                <h4 *ngIf="userID">Redactare utilizator</h4>
+                <button type="button" class="btn btn-primary" (click)="showList = !showList; onReset();">Înapoi</button>
+            </div>
+
+            <!-- input container -->
+            <div class="data-container">
+                <div class="card" style="width: 100%;">
+                    <div class="card-header">
+                        <strong *ngIf="!userID">Entitate nouă</strong>
+                        <p *ngIf="userID">ID utilizator: <strong>{{userID}}</strong></p>
+                    </div>
+
+                    <div class="card-body">
+                        <form action="" method="post">
+
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fa fa-user"></i></span>
+                                    </div>
+                                    <input type="text" [value]="userName" (keyup)='userName=$event.target.value' id="username" name="username" class="form-control" placeholder="Username">
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fa fa-envelope"></i></span>
+                                    </div>
+                                    <input type="email" [value]="userEmail" (keyup)='userEmail=$event.target.value' id="email" name="email" class="form-control" placeholder="Email" autocomplete="email">
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fa fa-asterisk"></i></span>
+                                    </div>
+                                    <input type="password" [value]="newPassword" (keyup)='newPassword=$event.target.value' id="password" name="password" class="form-control" placeholder="Password" autocomplete="current-password">
+                                </div>
+                            </div>
+
+                            <div *ngIf="userID">
+                                <p *ngIf="loadedUser.CreatedAt">Creat la: <strong>{{loadedUser.CreatedAt}}</strong></p>
+                                <p *ngIf="loadedUser.UpdatedAt">Modificat la: <strong>{{loadedUser.UpdatedAt}}</strong></p>
+                                <p *ngIf="loadedUser.DeletedAt">Șters la: <strong>{{loadedUser.DeletedAt}}</strong></p>
+                            </div>
+
+
+                        </form>
+                    </div>
+
+                    <div class="card-footer" style="display: flex; justify-content: space-between; width: 100%;">
+                        <button *ngIf="userID" type="button" class="btn btn-md btn-primary" (click)="showList = !showList; onReset();">Înapoi</button>
+                        <button *ngIf="!userID" type="reset" class="btn btn-md btn-danger" (click)="onReset()"><i class="fa fa-ban"></i>  Reset</button>
+                        <button type="submit" class="btn btn-md btn-success" [disabled]="userName.length === 0 || userEmail.length === 0 || newPassword.length === 0" (click)="addEntity()"><i class="fa fa-dot-circle-o"></i>  Salvează</button>
+                    </div>
+
                 </div>
 
-                <div class="card-body">
-                  <form action="" method="post">
-
-                        <div class="form-group">
-                            <div class="input-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text"><i class="fa fa-user"></i></span>
-                            </div>
-                            <input type="text" [value]="userName" (keyup)='userName=$event.target.value' id="username" name="username" class="form-control" placeholder="Username">
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <div class="input-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text"><i class="fa fa-envelope"></i></span>
-                            </div>
-                            <input type="email" [value]="userEmail" (keyup)='userEmail=$event.target.value' id="email" name="email" class="form-control" placeholder="Email" autocomplete="email">
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <div class="input-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text"><i class="fa fa-asterisk"></i></span>
-                            </div>
-                            <input type="password" [value]="newPassword" (keyup)='newPassword=$event.target.value' id="password" name="password" class="form-control" placeholder="Password" autocomplete="current-password">
-                            </div>
-                        </div>
-
-                        <div *ngIf="userID">
-                          <p *ngIf="loadedUser.CreatedAt">Creat la: <strong>{{loadedUser.CreatedAt}}</strong></p>
-                          <p *ngIf="loadedUser.UpdatedAt">Modificat la: <strong>{{loadedUser.UpdatedAt}}</strong></p>
-                          <p *ngIf="loadedUser.DeletedAt">Șters la: <strong>{{loadedUser.DeletedAt}}</strong></p>
-                        </div>
-                        
-                    
-                  </form>
+                <!-- error message -->
+                <div class="row" *ngIf="errorMessage" style="margin-bottom: 10px;">
+                    <div class="col-12" style="color: #f86c6b;">
+                        {{errorMessage}}
+                    </div>
                 </div>
 
-                <div class="card-footer" style="display: flex; justify-content: space-between; width: 100%;">
-                    <button *ngIf="userID" type="button" class="btn btn-md btn-primary" (click)="showList = !showList; onReset();">Înapoi</button>
-                    <button *ngIf="!userID" type="reset" class="btn btn-md btn-danger" (click)="onReset()"><i class="fa fa-ban"></i>  Reset</button>
-                    <button type="submit" class="btn btn-md btn-success" [disabled]="userName.length === 0 || userEmail.length === 0 || newPassword.length === 0" (click)="addEntity()"><i class="fa fa-dot-circle-o"></i>  Salvează</button>
-                </div>
+            </div>
 
-              </div>
-              
-              <!-- error message -->
-              <div class="row" *ngIf="errorMessage" style="margin-bottom: 10px;">
-                <div class="col-12" style="color: #f86c6b;">
-                  {{errorMessage}}
-                </div>
-              </div>
-              
+
         </div>
+        <!-- end input container -->
 
+    </main>
 
-    </div>
-    <!-- end input container -->
-
-  </main>
-
-  <!-- modal -->
-  <div bsModal #dangerModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-danger" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Confirmați ștergerea entității</h4>
-          <button type="button" class="close" (click)="dangerModal.hide()" aria-label="Close">
+    <!-- modal -->
+    <div bsModal #dangerModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-danger" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Confirmați ștergerea entității</h4>
+                    <button type="button" class="close" (click)="dangerModal.hide()" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
+                </div>
+                <div class="modal-body">
+                    <p>Sunteți sigur că vreți să ștergeți entitatea dată?</p>
+                    <strong *ngIf="toDeleteEntity">{{toDeleteEntity.type}}</strong>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" (click)="dangerModal.hide()">Anulează</button>
+                    <button type="button" class="btn btn-danger" (click)="deleteConfirmed()">Șterge</button>
+                </div>
+            </div>
+            <!-- /.modal-content -->
         </div>
-        <div class="modal-body">
-          <p>Sunteți sigur că vreți să ștergeți entitatea dată?</p>
-          <strong *ngIf="toDeleteEntity">{{toDeleteEntity.type}}</strong>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" (click)="dangerModal.hide()">Anulează</button>
-          <button type="button" class="btn btn-danger" (click)="deleteConfirmed()">Șterge</button>
-        </div>
-      </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-  </div><!-- /.modal -->
-  
+        <!-- /.modal-dialog -->
+    </div>
+    <!-- /.modal -->
+
 </div>
 
 <!-- loader -->
-<div *ngIf="activateLoader" 
-      style="z-index: 1111;
+<div *ngIf="activateLoader" style="z-index: 1111;
       position: fixed;
       top: 0;
       left: 0;
@@ -224,5 +219,5 @@
       align-items: center;
       background: #fff;
       opacity: 70%;">
-  <img alt="nodata" src="../../../../assets/img/spinner.gif" style="width: 200px; margin: 20px;" />
+    <img alt="nodata" src="../../../../assets/img/spinner.gif" style="width: 200px; margin: 20px;" />
 </div>
