--- a/src/app/views/parcare-reporting/parcare-reporting.component.html
+++ b/src/app/views/parcare-reporting/parcare-reporting.component.html
@@ -5,7 +5,7 @@
             <a class="nav-link" href="#">Dashboard</a>
         </li>
         <li class="nav-item px-3">
-            <a class="nav-link" href="#">Users</a>
+            <a class="nav-link" href="#/parcare-reporting">Raportare</a>
         </li>
         <li class="nav-item px-3">
             <a class="nav-link" href="#">Settings</a>
