--- a/src/app/views/parcaredash/parcaredash.component.html
+++ b/src/app/views/parcaredash/parcaredash.component.html
@@ -306,6 +306,18 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="registrationNr">Pret Vanzare</label>
+                    <input type="text" placeholder="Preț de vânzare de ex. 200" max="8" maxlength="8" [value]="sale_price" (keyup)='sale_price=$event.target.value' class="form-control" id="sale_price" name="sale_price" autocomplete="sale_price">
+                    <span class="help-block" style="font-style: italic; font-size: 12px;">Introduceți prețul de vânzare</span>
+                </div>
+
+                <div class="form-group">
+                    <label for="registrationNr">Motivul descarcarii</label>
+                    <input type="text" placeholder="Reason" max="8" maxlength="8" [value]="unloading_reason" (keyup)='unloading_reason=$event.target.value' class="form-control" id="unloading_reason" name="unloading_reason" autocomplete="unloading_reason">
+                    <span class="help-block" style="font-style: italic; font-size: 12px;">Introduceți Motivul de descărcare</span>
+                </div>
+
+                <div class="form-group">
                     <label for="registrationNr">Numărul de înregistrare</label>
                     <input type="text" placeholder="AAA 001" max="8" maxlength="8" [value]="modalRegistrationNr" (keyup)='modalRegistrationNr=$event.target.value' class="form-control" id="registrationNr" name="registrationNr" autocomplete="registrationNr">
                     <span class="help-block" style="font-style: italic; font-size: 12px;">Introduceți numărul de înregistrare</span>
@@ -313,6 +325,7 @@
 
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" (click)="infoModal.hide()">Închide</button>
+                    <button type="button" class="btn btn-success" (click)="saveSalesPrice()">Actualizați prețul de vânzare</button>
                     <button type="button" *ngIf="toExclude" class="btn btn-success" (click)="onExclude()">Eliberează</button>
                 </div>
             </div>
