--- a/src/app/views/parcare-reporting/parcare-reporting.component.html
+++ b/src/app/views/parcare-reporting/parcare-reporting.component.html
@@ -81,8 +81,15 @@
 
             <div *ngIf="!isLoading && tableData.length  > 0" class="data-container">
                 <div class="card-body" style="width: 100%;">
-                    <div class="row justify-content-end d-flex">
-                        <p>Showing {{this.tableData.length}} records !</p>
+                    <div class="row justify-content-between align-items-center d-flex">
+                        <div class="col-2 m-1 d-flex justify-content-evenly align-items-center">
+                            <button class="btn btn-success mx-1 mr-1" (click)="filterData('active')">Filter By Active</button>
+                            <button class="btn btn-danger" (click)="filterData('inactive')">Filter By In-Active</button>
+                        </div>
+                        <div class="m-1 d-flex justify-content-between align-items-center">
+                            <p class="p-0 m-0">Showing {{this.tableData.length}} records !</p>
+                            <button class="btn btn-primary mx-1 ml-1"> Total Amount : {{this.totalAmount}} </button>
+                        </div>
                     </div>
                     <table class="table table-striped">
                         <thead>
